--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -1,11 +1,2 @@
-name: vantage_example_yaml
-runtime: yaml
-description: Create a vantage connection
-resources: {}
-variables:
-  default_vantage_provider:
-    fn::invoke:
-      function: vantage:index:getAwsProvider
-      return: iamRoleArn
-outputs:
-  vantage_iam_role: ${default_vantage_provider}
+config:
+  aws:region: us-east-1
