--- a/.github/workflows/command-dispatch.yml
+++ b/.github/workflows/command-dispatch.yml
@@ -26,7 +26,7 @@ jobs:
         issue-type: pull-request
         permission: write
         reaction-token: ${{ secrets.GITHUB_TOKEN }}
-        repository: lbrlabs/pulumi-grafana
+        repository: lbrlabs/pulumi-vantage
         token: ${{ secrets.PULUMI_BOT_TOKEN }}
     strategy: {}
 "on":
